<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/popup_system_prompt_title"
        android:background="#eee"
        android:textColor="#333" />

    <EditText
        android:id="@+id/et_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/popup_system_prompt_input"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:textColor="#777"
        android:textSize="16sp"
        android:padding="20dp"
        android:text="@string/popup_system_prompt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_finish"
        android:text="@string/popup_system_prompt_submit"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />
</LinearLayout>